--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,22 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
-<head>
-<<<<<<< HEAD
+  <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-=======
-    <meta charset="UTF-8"/>
-    <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-> 84520fc (수정 #1)
     <title>약국 관리 시스템</title>
-</head>
-<body>
-<div id="root"></div>
-<script type="module" src="/src/main.tsx"></script>
-<script type="text/javascript"
-        src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3117fed0f314317d3270cd28f431d4f4&autoload=false">
-</script>
-</body>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3117fed0f314317d3270cd28f431d4f4&autoload=false"
+    ></script>
+  </body>
 </html>
