--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
     <script type="module" src="/src/main.tsx"></script>
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3117fed0f314317d3270cd28f431d4f4&autoload=false"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=3117fed0f314317d3270cd28f431d4f4&libraries=services"
     ></script>
   </body>
 </html>
